Refactor and optimize parameter handling, type mapping, and utility classes.
- Replaced multiple `instanceof` checks with enhanced `switch` statements for better readability in `BQPreparedStatement`.
- Simplified mapping logic in `TypeMapper` by consolidating case statements and improving maintainability.
- Removed unused constants, variables, and methods in `SQLStates`, `ErrorMessages`, and other utility classes.
- Improved null checks in `BQResultSet` for `getBoolean` methods.
- Refactored repetitive test constructor code in `ConnectionPropertiesTest`.
- Replaced manual casts with `assertInstanceOf` in `TypeMappingTest` for cleaner test assertions.
- Streamlined data extraction in `MetadataResultSet